--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: Jekyll Serial Programmer
+title: Hello World!
 markdown: kramdown
 
 # for atom feed
 author:
-  name: Sharad Raj Singh Maurya
-  email: dev_sharad@outlook.com
+  name: Toby Tang
+  email: toby.tang@ebrook.com.tw
 
 plugins:
   - jemoji
