--- a/_data/author.yml
+++ b/_data/author.yml
@@ -1,23 +1,13 @@
-name: Sharad Raj
-dp: https://avatars2.githubusercontent.com/u/36638057?s=460&u=0cbe4fd6b5a3655d91b3eb86db834d0829a0c086&v=4
+name: Toby Tang
+dp: https://avatars.githubusercontent.com/u/28836872?s=400&u=2b6d968b6c707fbeac7626ec8ad6075f2c048b26&v=4
 description: "
   <p>
-    Developed by Sharad Raj who lives in India building useful things for the world.
-  </p>
-  <br/>
-  <p>
-    You should follow him on <a href='https://github.com/sharadcodes' target='_blank'>Github</a>
+    You should follow him on <a href='https://github.com/tobytang-ebrook' target='_blank'>Github</a>
   </P>
 "
-email: dev_sharad@outlook.com
+email: toby.tang@ebrook.com.tw
 contact:
-  - title: linkedin
-    url: https://www.linkedin.com/in/srsmaurya
   - title: github
-    url: https://github.com/sharadcodes
-  - title: twitter
-    url: https://twitter.com/iamsharadraj
-  - title: dev
-    url: https://dev.to/sharadcodes
+    url: https://github.com/tobytang-ebrook
   - title: email
-    url: mailto:dev_sharad@outlook.com
+    url: mailto:toby.tang@ebrook.com.tw
